# chat_app_rust

./: Cargo.toml
prisma/: schema.prisma
src/: lib.rs  main.rs
src/chat/: chat_router.rs  mod.rs
src/chat/interfaces/: mod.rs  single_user_param.rs
src/chat/invites/: accept_invite.rs  invite_user.rs  mod.rs  response_invite.rs  retrieve_invite.rs
src/chat/invites/interfaces/: invite_id_param.rs  mod.rs
src/chat/messages/: delete_message.rs  mod.rs  retrieve_message.rs  retrieve_messages.rs  send_message.rs
src/chat/messages/interfaces/: mod.rs  retrieve_message_params.rs
src/chat/messages/middlewares/: can_talk.rs  mod.rs
src/chat/middlewares/: is_owner.rs  is_participant.rs  mod.rs
src/chat/rooms/: create_chat.rs  delete_chat.rs  join_chat.rs  leave_chat.rs  mod.rs  retrieve_chat.rs
src/chat/rooms/interfaces/: mod.rs  params_chat.rs
src/chat/rooms/moderation/: ban_user.rs  mod.rs  unban_user.rs
src/error/: default_error.rs  mod.rs  validation_error.rs
src/governor/: display_error.rs  mod.rs
src/prisma_client/: client.rs
src/rejection/: error_format.rs  json.rs  mod.rs  path.rs
src/shared/: arc_clients.rs  mod.rs
src/socket/: mod.rs  websocket_router.rs
src/socket/handlers/: incoming_user_message.rs  mod.rs  private_message_handler.rs  ratelimit.rs  websocket_primary_handler.rs
src/socket/interfaces/: mod.rs  websocket_error.rs  websocket_incoming_message.rs  websocket_message.rs
src/users/: mod.rs  users_router.rs
src/users/handlers/: create_user.rs  current_user.rs  mod.rs
src/users/middlewares/: is_authenticated.rs
